src/test/ui/inline-const/const-match-pat-generic.stderr
error: constant pattern depends on a generic parameter
  --> $DIR/const-match-pat-generic.rs:8:9
   |
LL |         const { V } => {},
   |         ^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/const-match-pat-generic.rs:21:9
   |
LL |         const { f(V) } => {},
   |         ^^^^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/const-match-pat-generic.rs:8:9
   |
LL |         const { V } => {},
   |         ^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/const-match-pat-generic.rs:21:9
   |
LL |         const { f(V) } => {},
   |         ^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

